# KCSB-testing

./: .env.example  .gitignore  README.md  analytics_engine.sqlite3  package.json  package_wind.json  pyproject.toml  requirements.txt  test.ipynb
.github/workflows/: ci.yml
analytics_engine/: __init__.py  cli.py  comparison.py  db.py  ingest.py  insights.py  manual_input.py  metrics.py  models.py  pbp_parser.py  pipeline.py  sample_data.py
apps/api/: __init__.py  __main__.py  server.py
apps/api/tests/: test_server.py
apps/web/: index.html  package-lock.json  package.json  vite.config.js
apps/web/src/: App.jsx  evidenceNavigation.js  pbpFilters.js  styles.css
apps/web/src/components/: Layout.jsx  LiveGameStats
apps/web/tests/: evidenceNavigation.test.mjs  pbpAdvancedFilters.test.mjs
data/: pbp-401809115.json  pbp-401826049.json
data/espn/: teams-2025-26.json
data/espn/13/: manifest.json  player.csv  team.csv
data/espn/2540/: manifest.json  player.csv  team.csv
scripts/: dev-api.sh  dev-web.sh  dev.bat  dev.sh  ensure-python.sh  ensure-web.sh  setup.bat  setup.sh  test-api.bat  test-api.sh  test-ci.sh  test-web.sh  warn-openai-key.bat  warn-openai-key.sh
