[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ucsb-basketball-analytics"
version = "0.1.0"
description = "Production-oriented in-game UCSB basketball analytics engine"
requires-python = ">=3.9"
dependencies = [
  "requests>=2.31.0",
  "beautifulsoup4>=4.12.0",
  "pdfplumber>=0.11.0",
]

[project.scripts]
ucsb-analytics = "analytics_engine.cli:main"

[tool.setuptools]
packages = ["analytics_engine"]
